2010-10-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSAvahiRunLoopIntegration.m: Fix some bugs:
	 - Remove an extra retain of the NSTimer which was leaking memory.
	 - When passed a NULL struct timeval * from avahi, invalidate
	 the timer and don't schedule a new one.

2010-10-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPredicate.m: Add simple implementation of
	evalutedObjectExpression

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Revert to the working version
	from the last release.
	Can't see a changelog for the last change, I guess some local
	hack was accidentally committed... it broke KVC, which showed up
	when the testsuite was run.

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GNUmakefile: Remove reference to non-existent behavior.h
        * Source/Makefile.postamble: Don't make circular dependency on
        common.h

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m:
	* Source/NSSocketPort.m:
	* Source/NSMessagePort.m:
	* Source/win32/GSFileHandle.m:
	* Source/GSNetwork.h:
	* Source/GSFileHandle.m:
	Standardise the backlog parameter to listen() calls.

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Fix for bug #31153 ... allow hash in path when
	initialising.
	* Source/NSURLProtocol.m: Fix thread related crash with deallocation
	of placeholder object.

2010-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	Increase the backlog for the listen() call to allow more incoming
	network connections.

2010-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLProtocol.m: Remove excess release pointed out by
	Sergey Golovin (bug 31168)

2010-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: restore standardisation of header name
	lost in last optimisation.  Fixes bug #31166

2010-09-28  Eric Wasylishen  <ewasylishen@gmail.com>
