@@ -1,3 +1,7 @@
+2010-10-12  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSURL.m: Exactly match the percent escaping used by OSX.
+
 2010-10-08  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Source/GSAvahiRunLoopIntegration.m: Fix some bugs:
@@ -216,7 +220,7 @@
 	Change sel_getUid to call sel_registerName, in line with OS X
 	behaviour since 10.0
 
-2010-09-02 9avid Chisnall <theraven@gna.org>
+2010-09-02 David Chisnall <theraven@gna.org>
 
 	* Source/NSBundle.m
 	* Source/NSMethodSignature.m
